add test and change package

--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
     "name": "treelambda",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "for tree system call aws lambda function ",
+    "homepage": "https://github.com/david-marstree/treeLambda#readme",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
+    "type": "module",
     "types": "lib/esm/index.d.ts",
-    "dependencies": {
-        "@aws-sdk/client-lambda": "^3.282.0"
-    },
-    "devDependencies": {
-        "@tsconfig/node-lts": "^18.12.4",
-        "@types/node": "^20.5.2",
-        "typescript": "^5.1.6"
-    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc && tsc -p tsconfig-cjs.json"
@@ -29,5 +23,20 @@
     "bugs": {
         "url": "https://github.com/david-marstree/treeLambda/issues"
     },
-    "homepage": "https://github.com/david-marstree/treeLambda#readme"
+    "dependencies": {
+        "@aws-sdk/client-lambda": "^3.282.0"
+    },
+    "devDependencies": {
+        "@tsconfig/node-lts": "^18.12.4",
+        "@types/node": "^20.5.2",
+        "pexels": "^1.4.0",
+        "typescript": "^5.1.6"
+    },
+    "exports": {
+        ".": {
+            "import": "./lib/esm/index.js",
+            "require": "./lib/cjs/index.js"
+        },
+        "./package.json": "./package.json"
+    }
 }
